# 2024-antpie

./: .gitignore  CMakeLists.txt  Makefile  README.md  issue.md  makeout.txt
docs/: AntlrUsages.md
include/: main.hh
include/asm/: MInstruction.hh  Machine.hh  MachineInstruction.hh  MachineType.hh  Register.hh
include/cgen/: allocate_register.hh  cgen.hh  prelude_conclusion.hh  select_instruction.hh
include/frontend/: AggregateValue.hh  MySysYParserVisitor.h  VariableTable.h
include/ir/: Argument.hh  BasicBlock.hh  CFG.hh  Constant.hh  Function.hh  GlobalVariable.hh  Instruction.hh  Module.hh  Type.hh  Use.hh  Value.hh
include/opt/: AliasAnalysis.hh  AliasAnalysisResult.hh  CFGSimplify.hh  CSE.hh  ConstantFolding.hh  ConstantPropagation.hh  DataflowAnalysis.hh  DataflowResult.hh  DeadArgumentElimination.hh  DeadCodeElimination.hh  DomTree.hh  FunctionPropAnalysis.hh  GEPSimplify.hh  GlobalCodeMotion.h  GlobalValueNumbering.hh  GlobalVariableLocalize.hh  InductionVariableSimplify.hh  Inlining.hh  LoadElimination.hh  LoopAnalysis.hh  LoopIdvSimplify.hh  LoopInfo.hh  LoopInvariantCodeMotion.hh  LoopSimplify.hh  LoopUnroll.hh  LruCache.hh  MemToReg.hh  MergeBlock.hh  Optimization.hh  Reassociate.hh  Solver.hh  StoreElimination.hh  StrengthReduction.hh  TailRecursionElimination.hh  example.hh
include/util/: LabelManager.hh  LinkedList.hh  VisualizeGraph.hh
parser/: CMakeLists.txt  SysYLexer.g4  SysYParser.g4  SysYParser.interp  SysYParserBaseListener.cpp  SysYParserBaseListener.h  SysYParserBaseVisitor.cpp  SysYParserBaseVisitor.h  SysYParserLexer.cpp  SysYParserLexer.h  SysYParserLexer.interp  SysYParserListener.cpp  SysYParserListener.h  SysYParserParser.cpp  SysYParserParser.h  SysYParserVisitor.cpp  SysYParserVisitor.h  VariableTable.cpp  VariableTable.h
src/: MySysYParserVisitor.cpp  MySysYParserVisitor.h  main.cc
src/asm/: CMakeLists.txt  MInstruction.cc  Machine.cc  MachineInstruction.cc  MachineType.cc  Register.cc  memset.hh  multimod.hh
src/cgen/: CMakeLists.txt  allocate_register.cc  branch_simplification.cc  cgen.cc  peephole_optimization.cc  prelude_conclusion.cc  saa_allocation.cc  schedule_instruction.cc  select_instruction.cc  select_instruction_odl.cc  spill_allocation.cc  spill_register.cc  ssa_allocation.cc
src/frontend/: CMakeLists.txt  MySysYParserVisitor.cc  VariableTable.cc
src/ir/: Argument.cc  BasicBlock.cc  CFG.cc  CMakeLists.txt  Constant.cc  Function.cc  GlobalVariable.cc  Instruction.cc  Module.cc  Type.cc  Use.cc
src/opt/: AliasAnalysis.cc  CFGSimplify.cc  CMakeLists.txt  CSE.cc  CommonSubexpElimination.cc  ConstantFolding.cc  ConstantPropagation.cc  DeadArgumentElimination.cc  DeadCodeElimination.cc  DomTree.cc  FunctionPropAnalysis.cc  GEPSimplify.cc  GlobalCodeMotion.cc  GlobalValueNumbering.cc  GlobalVariableLocalize.cc  InductionVariableSimplify.cc  Inlining.cc  LoadElimination.cc  LoopAnalysis.cc  LoopIdvSimplify.cc  LoopInfo.cc  LoopInvariantCodeMotion.cc  LoopSimplify.cc  LoopUnroll.cc  LruCache.cc  MemToReg.cc  MergeBlock.cc  Reassociate.cc  StoreElimination.cc  StrengthReduction.cc  TailRecursionElimination.cc  example.cc
src/resources/test/: TestFile.cc
src/tests/: test.ll  test.phi.s
src/util/: CMakeLists.txt  LabelManager.cc  VisualizeGraph.cc  visualize_graph.py
tests/: test.sy  test_script.sh
tests/scripts/: test.py
