add_library(
        parser
        SysYParser.cpp
        SysYParser.h
        SysYParserBaseListener.cpp
        SysYParserBaseListener.h
        SysYParserBaseVisitor.cpp
        SysYParserBaseVisitor.h
        SysYParserListener.cpp
        SysYParserListener.h
        SysYParserVisitor.cpp
        SysYParserVisitor.h
        VariableTable.cpp
        VariableTable.h
)