add_library(
        parser
        SysYParser.cpp
        SysYParser.h
        SysYParserBaseListener.h
        SysYParserBaseListener.cpp
        SysYParserBaseVisitor.cpp
        SysYParserBaseVisitor.h
        SysYParserLexer.cpp
        SysYParserLexer.h
        SysYParserListener.cpp
        SysYParserListener.h
        SysYParserParser.cpp
        SysYParserParser.h
        SysYParserVisitor.h
        SysYParserVisitor.cpp
        VariableTable.cpp
        VariableTable.h
)