add_library(
    opt
    DomTree.cc
    MemToReg.cc
    CommonSubexpElimination.cc
    MergeBlock.cc
    Inlining.cc
    FunctionPropAnalysis.cc
    AliasAnalysis.cc
    LoopAnalysis.cc
    LoopSimplify.cc
    LoopInvariantCodeMotion.cc
    GlobalCodeMotion.cc
    LoopInfo.cc
    GlobalValueNumbering.cc
    LoopUnroll.cc
    TailRecursionElimination.cc
    DeadCodeElimination.cc
    ConstantFolding.cc
    GlobalVariableLocalize.cc
    LoadElimination.cc
)